--- a/css/main.css
+++ b/css/main.css
@@ -259,3 +259,54 @@ a.anchor.resume_link:after{
 .inspiration{
     color: #fff;
 }
+
+/* Media Queries for Mobile Devices */
+
+@media(max-width : 40rem){
+    .heading {
+        text-align: left;
+    }
+
+    .intro,.background,.skills,.experience,.projects,.footer{
+        padding: 2rem;
+        grid-gap: 2rem;
+    }
+
+    .intro{
+        padding: 4rem 2rem;
+        width: 100%;
+        font-size: 1.6rem;
+    }
+
+    .intro__contact{
+        font-size: 1rem;
+    }
+    .desc{
+        padding-left: 2rem;
+    }
+
+    .background,.skills,.experience,.projects{
+        grid-template-columns: initial;
+    }
+    
+    .skills__desc{
+        grid-template-columns: 1fr;
+    }
+    
+    .job__desc{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .footer{
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer__developer{
+        flex-basis: 50px;
+    }
+    .social-link{
+        margin-right: 1rem;
+    }
+}
