--- a/css/main.css
+++ b/css/main.css
@@ -5,17 +5,17 @@
 }
 
 body{
-    color: #fff;
+    color: #444452;
     font-family: 'Montserrat', sans-serif;
     font-size: 0.9rem;
     font-weight: 400;
     line-height: 1.7;
 
-    background-color: rgb(23, 28, 40);
+    background-color: #fff;
 }
 
 strong{
-    color: #fff;
+    color: #000;
 }
 
 .intro{
@@ -68,7 +68,7 @@ strong{
 
 .intro__contact a{
     text-decoration: none;
-    color: #fff;
+    color: #000;
     box-shadow: rgb(0, 123, 255) 0px -3px 0px inset;
 }
 
@@ -95,11 +95,11 @@ strong{
 
 .desc{
     font-size: 1rem;
-    color: #AFBFAF;
+    color: inherit;
 }
 
 .desc a{
-    color : #fff;
+    color : #000;
     text-decoration: none;
     text-transform: capitalize;
     font-weight: 700;
@@ -126,7 +126,7 @@ strong{
 
 .skills__desc__category__heading{
     text-transform: uppercase;
-    color: #fff;
+    color: #000;
     margin-bottom: 1rem;
     font-weight: 700;
 }
