--- a/css/main.css
+++ b/css/main.css
@@ -1,426 +1,462 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    color: #444452;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 0.9rem;
-    font-weight: 400;
-    line-height: 1.7;
+body {
+  color: #444452;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 1.7;
 
-    background-color: #fff;
+  background-color: #fff;
 }
 
-strong{
-    color: #000;
+strong {
+  color: #000;
 }
 
-.intro{
-    font-size: 2.5rem;
-    min-height: calc(90vh);
-    padding: 6rem 3rem;
-    padding-bottom: 0px;
+.intro {
+  font-size: 2.5rem;
+  min-height: calc(90vh);
+  padding: 6rem 3rem;
+  padding-bottom: 0px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.intro__greeting .wave{
-    display: inline-block;
-    width: 32px;
-    height: 32px;
+.intro__greeting .wave {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
 }
 
-.intro__greeting .wave-hand{
-    background-image: url(../assets/images/waving-hand.png);
+.intro__greeting .wave-hand {
+  background-image: url(../assets/images/waving-hand.png);
 }
 
-.intro__greeting .wave-hand:hover{
-    animation: wave 1s linear forwards;
-    transform-origin: bottom bottom;
+.intro__greeting .wave-hand:hover {
+  animation: wave 1s linear forwards;
+  transform-origin: bottom bottom;
 }
 
-@keyframes wave{
-    0%{
-        transform: rotate(0deg);
-    }
-    25%{
-        transform: rotate(-20deg);
-    }
-    50%{
-        transform: rotate(0deg);
-    }
-    75%{
-        transform: rotate(20deg);
-    }
-    100%{
-        transform: rotate(0deg);
-    }
+@keyframes wave {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(-20deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(20deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
-.intro__contact{
-    font-size: 1.4rem;
+.intro__contact {
+  font-size: 1.4rem;
 }
 
-.intro__contact a{
-    text-decoration: none;
-    color: #000;
-    box-shadow: rgb(0, 123, 255) 0px -3px 0px inset;
+.intro__contact a {
+  text-decoration: none;
+  color: #000;
+  box-shadow: rgb(0, 123, 255) 0px -3px 0px inset;
 }
 
-.intro__contact a:hover{
-    box-shadow: rgb(0, 123, 255) 0px -33px 0px 0px inset;
-    transition: all 0.4s;
+.intro__contact a:hover {
+  box-shadow: rgb(0, 123, 255) 0px -33px 0px 0px inset;
+  transition: all 0.4s;
 }
 
-.background{
-    padding: 6rem 3rem;
-    padding-bottom: 0px;
-    display: grid;
-    grid-template-columns: 130px auto;
-    grid-gap: 5rem;
+.background {
+  padding: 6rem 3rem;
+  padding-bottom: 0px;
+  display: grid;
+  grid-template-columns: 130px auto;
+  grid-gap: 5rem;
 }
 
-.heading{
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #007BFF;
-    text-align: right;
+.heading {
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #007bff;
+  text-align: right;
 }
 
-.desc{
-    font-size: 1rem;
-    color: inherit;
+.desc {
+  font-size: 1rem;
+  color: inherit;
 }
 
-.desc a{
-    color : #000;
-    text-decoration: none;
-    text-transform: capitalize;
-    font-weight: 700;
+.desc a {
+  color: #000;
+  text-decoration: none;
+  text-transform: capitalize;
+  font-weight: 700;
 }
 
-.desc>p{
-    margin-bottom: 2rem;
+.desc > p {
+  margin-bottom: 2rem;
 }
 
-.skills{
-    padding: 6rem 3rem;
-    padding-bottom: 0px;
-    display: grid;
-    grid-template-columns: 130px auto;
-    grid-gap: 5rem;
+.skills {
+  padding: 6rem 3rem;
+  padding-bottom: 0px;
+  display: grid;
+  grid-template-columns: 130px auto;
+  grid-gap: 5rem;
 }
 
-.skills__desc{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 4rem;
+.skills__desc {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 4rem;
 }
 
-
-.skills__desc__category__heading{
-    text-transform: uppercase;
-    color: #000;
-    margin-bottom: 1rem;
-    font-weight: 700;
+.skills__desc__category__heading {
+  text-transform: uppercase;
+  color: #000;
+  margin-bottom: 1rem;
+  font-weight: 700;
 }
 
-.skills__desc__category ul{
-    list-style: none;
+.skills__desc__category ul {
+  list-style: none;
 }
 
-.skills__desc__category ul li{
-    font-size: .9rem;
-    margin-bottom: 0.8rem;
-    line-height: 1.2;
+.skills__desc__category ul li {
+  font-size: 0.9rem;
+  margin-bottom: 0.8rem;
+  line-height: 1.2;
 }
 
-.experience{
-    padding: 6rem 3rem;
-    padding-bottom: 0px;
-    display: grid;
-    grid-template-columns: 130px auto;
-    grid-gap: 5rem;
+.experience {
+  padding: 6rem 3rem;
+  padding-bottom: 0px;
+  display: grid;
+  grid-template-columns: 130px auto;
+  grid-gap: 5rem;
 }
 
-.job{
-    margin-bottom: 2rem;
+.job {
+  margin-bottom: 2rem;
 }
 
-.job__desc{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.job__desc {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.job__duration{
-    font-size: 14px;
-    color: #444452;
+.job__duration {
+  font-size: 14px;
+  color: #444452;
 }
 
-.job__position{
-    color: inherit;
-    font-size: 14px;
+.job__position {
+  color: inherit;
+  font-size: 14px;
 }
 
-.anchor{
-    position: relative;
-    color: #000;
-    font-weight: 700;
-    text-decoration: none;
+.anchor {
+  position: relative;
+  color: #000;
+  font-weight: 700;
+  text-decoration: none;
 }
 
-a.anchor:after{
-    width: 100%;
-    content: " ";
-    position: absolute;
-    bottom: 0%;
-    left: 0;
-    border-bottom: 2px solid #fff;
+a.anchor:after {
+  width: 100%;
+  content: " ";
+  position: absolute;
+  bottom: 0%;
+  left: 0;
+  border-bottom: 2px solid #fff;
 
-    opacity: 0;
-    transform: translateY(6px);
-    transition: all 1s;
+  opacity: 0;
+  transform: translateY(6px);
+  transition: all 1s;
 }
 
-a.anchor:hover::after{
-    opacity: 1;
-    transform: translateY(0);
+a.anchor:hover::after {
+  opacity: 1;
+  transform: translateY(0);
 }
 
-.resume_link{
-    font-size: 1.2rem;
-    grid-column: 2/-1;
+.resume_link {
+  font-size: 1.2rem;
+  grid-column: 2/-1;
 }
 
-a.anchor.resume_link:after{
-    content: "";
-    width: 0;
+a.anchor.resume_link:after {
+  content: "";
+  width: 0;
 }
 
-.projects{
-    padding: 6rem 3rem;
-    padding-bottom: 0px;
-    display: grid;
-    grid-template-columns: 130px auto;
-    grid-gap: 5rem;
+.projects {
+  padding: 6rem 3rem;
+  padding-bottom: 0px;
+  display: grid;
+  grid-template-columns: 130px auto;
+  grid-gap: 5rem;
 }
 
-.project{
-    margin-bottom: 4rem;
+.project {
+  margin-bottom: 4rem;
 }
 
-.project__title{
-    color: #fff;
-    font-weight: 700;
-    margin-bottom: 0.6rem;
-    cursor: pointer;
+.project__title {
+  color: #fff;
+  font-weight: 700;
+  margin-bottom: 0.6rem;
+  cursor: pointer;
 }
 
-.project__desc{
-    font-size: 0.9rem;
-    margin-bottom: 1rem;
+.project__desc {
+  font-size: 0.9rem;
+  margin-bottom: 1rem;
 }
 
-.project__tech ul{
-    list-style: none;
+.project__tech ul {
+  list-style: none;
 }
 
-.project__tech>ul>li{
-    font-size: 0.8rem;
-    display: inline-block;
-    text-transform: uppercase;
-    border: 1px solid #007BFF;
-    padding: 0.1rem 0.8rem;
-    border-radius: 4px;
-    color: #007BFF;
+.project__tech > ul > li {
+  font-size: 0.8rem;
+  display: inline-block;
+  text-transform: uppercase;
+  border: 1px solid #007bff;
+  padding: 0.1rem 0.8rem;
+  border-radius: 4px;
+  color: #007bff;
 }
 
-.footer{
-    padding: 4rem 6rem;
-    margin-top: 8rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.footer {
+  padding: 4rem 6rem;
+  margin-top: 8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.social-link{
-    color: #007bff;
-    margin-right: 3rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+.social-link {
+  color: #007bff;
+  margin-right: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
-.footer__developer{
-    flex-basis: 200px;
+.footer__developer {
+  flex-basis: 200px;
 }
 
-.toggler{
-    position: absolute;
-    top: 0;
-    right: 0;
+.toggler {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
-#switch{
-    display: none;
+#switch {
+  display: none;
 }
 
-.toggler__wrapper{
-    width: 40px;
-    height: 20px;
+.toggler__wrapper {
+  width: 40px;
+  height: 20px;
 }
 
-#toggle{
-    width: 100px;
-    height: 20px;
+#toggle {
+  width: 100px;
+  height: 20px;
 }
 
-#toggle::after{
-    content: ' ';
-    width: 100%;
-    height: 100%;
+#toggle::after {
+  content: " ";
+  width: 100%;
+  height: 100%;
 
-    background-color: red;
+  background-color: red;
 }
 
-.inspiration{
-    color: #fff;
+.inspiration {
+  color: #000;
 }
 
-a.anchor-link{
-    display: none;
-    width: 40px;
-    height: 40px;
+a.anchor-link {
+  display: none;
+  width: 40px;
+  height: 40px;
 
-    position: fixed;
-    bottom: 20px;
-    right: 10px;
-    transition: all .5s;
-    cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+  transition: all 0.5s;
+  cursor: pointer;
 }
 
-a.anchor-link.show{
-    display: inline-block;
+a.anchor-link.show {
+  display: inline-block;
 }
 
-a.anchor-link img{
-    transition: transform .2s linear;
+a.anchor-link img {
+  transition: transform 0.2s linear;
 }
 
-a.anchor-link img:hover{
-    transform: translateY(-10px);
+a.anchor-link img:hover {
+  transform: translateY(-10px);
 }
 
 /* Media Queries for Mobile Devices */
 
-@media(max-width : 768px){
-    .heading {
-        text-align: left;
-        font-size: 1.5rem;
-    }
+@media (max-width: 768px) {
+  .heading {
+    text-align: left;
+    font-size: 1.5rem;
+  }
 
-    .intro,.background,.skills,.experience,.projects,.footer{
-        padding: 2rem;
-        grid-gap: 2rem;
-    }
+  .intro,
+  .background,
+  .skills,
+  .experience,
+  .projects,
+  .footer {
+    padding: 2rem;
+    grid-gap: 2rem;
+  }
 
-    .intro{
-        padding: 4rem 2rem;
-        width: 100%;
-        font-size: 2rem;
-        min-height: 30rem;
-    }
+  .intro {
+    padding: 4rem 2rem;
+    width: 100%;
+    font-size: 2rem;
+    min-height: 30rem;
+  }
 
-    .intro__contact{
-        font-size: 1rem;
-    }
-    .desc{
-        padding-left: 2rem;
-        font-size: 1.2rem;
-    }
+  .intro__contact {
+    font-size: 1rem;
+  }
+  .desc {
+    padding-left: 2rem;
+    font-size: 1.2rem;
+  }
 
-    .skills__desc__category ul li,.job__duration{
-        font-size: 1.1rem;
-    }
+  .skills__desc__category ul li,
+  .job__duration {
+    font-size: 1.1rem;
+  }
 
-    .background,.skills,.experience,.projects{
-        grid-template-columns: initial;
-    }
-    
-    .skills__desc{
-        grid-template-columns: repeat(3,1fr);
-    }
-    
-    .job__desc{
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    
-    .footer{
-        flex-direction: column;
-        text-align: center;
-        margin-top: initial;
-    }
+  .background,
+  .skills,
+  .experience,
+  .projects {
+    grid-template-columns: initial;
+  }
 
-    .footer__developer{
-        flex-basis: 50px;
-    }
-    .social-link{
-        margin-right: 1rem;
-    }
+  .skills__desc {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .job__desc {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .footer {
+    flex-direction: column;
+    text-align: center;
+    margin-top: initial;
+  }
+
+  .footer__developer {
+    flex-basis: 50px;
+  }
+  .social-link {
+    margin-right: 1rem;
+  }
 }
 
-@media(max-width : 480px){
-    .heading {
-        text-align: left;
-    }
+@media (max-width: 480px) {
+  .heading {
+    text-align: left;
+  }
 
-    .intro,.background,.skills,.experience,.projects,.footer{
-        padding: 2rem;
-        grid-gap: 2rem;
-    }
+  .intro,
+  .background,
+  .skills,
+  .experience,
+  .projects,
+  .footer {
+    padding: 2rem;
+    grid-gap: 2rem;
+  }
 
-    .intro{
-        padding: 4rem 2rem;
-        width: 100%;
-        font-size: 1.6rem;
-    }
+  .intro {
+    padding: 4rem 2rem;
+    width: 100%;
+    font-size: 1.6rem;
 
-    .intro__contact{
-        font-size: 1rem;
-    }
-    .desc{
-        padding-left: 2rem;
-    }
+    background-color: #007bff;
+    color: #fff;
+    clip-path: polygon(0 12%, 100% 0, 100% 88%, 0 100%);
+  }
 
-    .background,.skills,.experience,.projects{
-        grid-template-columns: initial;
-    }
-    
-    .skills__desc{
-        grid-template-columns: 1fr;
-    }
-    
-    .job__desc{
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    
-    .footer{
-        flex-direction: column;
-        text-align: center;
-    }
+  .intro__contact {
+    font-size: 1rem;
+  }
+  .desc {
+    padding-left: 2rem;
+  }
 
-    .footer__developer{
-        flex-basis: 50px;
-    }
-    .social-link{
-        margin-right: 1rem;
-    }
+  .background,
+  .skills,
+  .experience,
+  .projects {
+    grid-template-columns: initial;
+  }
+
+  .skills {
+    background-color: #007bff;
+    color: #fff;
+    clip-path: polygon(0 0, 100% 4%, 100% 100%, 0 96%);
+  }
+
+  .skills__heading,.projects__heading{
+      color: #fff;
+  }
+
+  .skills__desc {
+    grid-template-columns: 1fr;
+  }
+
+  .projects{
+    background-color: #007bff;
+    color: #fff;
+    clip-path: polygon(0 0, 100% 2%, 100% 100%, 0 98%);
+  }
+
+  .job__desc {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .footer {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .footer__developer {
+    flex-basis: 50px;
+  }
+  .social-link {
+    margin-right: 1rem;
+  }
 }
